--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,8 @@
     }
     p {
       font-size: 30px;
-      color: white;
-      padding-top:50px;
+      color: black;
+      padding-top:40px;
     }
     input {
       border: 0;
@@ -28,7 +28,8 @@
 </head>
 <body>
   <img src="/assets/anna.png">
-  <p>Kenya my MotherLand,Nairobi my city , my town and  my home!!! Love Nairobi Kenya </p>
+  <p>Kenya my MotherLand,Nairobi my city , my town and  my home!!!    </p>
+  <p>Love Nairobi Kenya </p>
   <input type="email" placeholder="Your email">
   <input type="submit">
 </body>
